# qia_games

Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Hw1/: CMakeLists.txt  Triangle.hpp  main.cpp
pa0/: CMakeLists.txt  main.cpp
